@@ -2,6 +2,13 @@
 
     * src/lib/FileStoragePolicy.cpp (updateFile)
 
+    - Rename ptr -> convertedData.
+    - Fix white space.
+
+2008-05-20  Jens-Michael Hoffmann  <jensmh@gmx.de>
+
+    * src/lib/FileStoragePolicy.cpp (updateFile)
+
     Convert images with format QImage::Format_Indexed8 to QImage::Format_RGB32.
 
 2008-05-20  Jens-Michael Hoffmann  <jensmh@gmx.de>
